# XcodeBenchmark

./: --verbose_failures  .bazelrc  .gitignore  WORKSPACE.bazel  buildspec.yaml  external  verbose_logs
.github/workflows/: ci.yml  deploy.yml
XcodeBenchmark/: BUILD.bazel  ContentView.swift  ContentView1.swift  Info.plist  ViewModel1.swift  XcodeBenchmarkApp.swift
XcodeBenchmark.xcodeproj/: project.pbxproj
XcodeBenchmark.xcodeproj/xcshareddata/xcschemes/: XcodeBenchmark.xcscheme
XcodeBenchmark.xcodeproj/xcuserdata/tahabebek.xcuserdatad/xcschemes/: xcschememanagement.plist
XcodeBenchmark/Screen1/: BUILD.bazel  ContentView1.swift  ViewModel1.swift
XcodeBenchmark/Screen10/: BUILD.bazel  ContentView10.swift  ViewModel10.swift
XcodeBenchmark/Screen2/: BUILD.bazel  ContentView2.swift  ViewModel2.swift
XcodeBenchmark/Screen3/: BUILD.bazel  ContentView3.swift  ViewModel3.swift
XcodeBenchmark/Screen4/: BUILD.bazel  ContentView4.swift  ViewModel4.swift
XcodeBenchmark/Screen5/: BUILD.bazel  ContentView5.swift  ViewModel5.swift
XcodeBenchmark/Screen6/: BUILD.bazel  ContentView6.swift  ViewModel6.swift
XcodeBenchmark/Screen7/: BUILD.bazel  ContentView7.swift  ViewModel7.swift
XcodeBenchmark/Screen8/: BUILD.bazel  ContentView8.swift  ViewModel8.swift
XcodeBenchmark/Screen9/: BUILD.bazel  ContentView9.swift  ViewModel9.swift
XcodeBenchmarkTests/: BUILD.bazel  XcodeBenchmarkTests.swift
XcodeBenchmarkUITests/: XcodeBenchmarkUITests.swift  XcodeBenchmarkUITestsLaunchTests.swift
XcodeProject.xcodeproj/: project.pbxproj
XcodeProject.xcodeproj/XCHammerAssets/: BUILD  bazel_build_settings.py  updateXcodeProj.sh
XcodeProject.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
