load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SwiftLibrary",
    srcs = glob([
        "*.swift",
    ]),
    tags = ["manual"],
    deps = [
        "//XcodeBenchmark:SwiftLibrary",
    ],
)
ios_unit_test(
    name = "XcodeBenchmarkTests",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "15.5",
    deps = [":SwiftLibrary"],
)